# AMIR-SLAM

./: README.md
octomap_server/: CMakeLists.txt  package.xml
octomap_server/include/octomap_server/: OctomapServer.h
octomap_server/include/pose_graph_3d/: pose_graph_3d.h  read_g2o.h
octomap_server/include/submap3d_optimizer/: Submap3dOptimizer.h
octomap_server/include/submap3d_server/: Submap3dServer.h
octomap_server/include/submap3d_visualizer/: Submap3dVisualizer.h
octomap_server/launch/: 3dmap_loader.launch  demo_rgbdv2_odom_mit.launch  demo_rgbdv2_odom_our.launch  demo_rgbdv2_rgbd_mit.launch  demo_rgbdv2_rgbd_our.launch  demo_rtab_odom_mit.launch  demo_rtab_rgbd_mit.launch  result_amir_mit.launch  result_amir_our.launch  result_blam_pcd2pointcloud2octo.launch  result_carto3d_pcd2pointcloud.launch  result_rgbdv2_mit.launch  result_rtab_mit.launch  result_rtab_pcd2pointcloud2octo.launch  rtabmap.launch
octomap_server/msg/: PosePointCloud2.msg
octomap_server/scripts/: amirslam_extractor.py  amirslam_loader.py  amirslam_trajectory_labeler.py  amirslam_trajectory_query.py  cartographer_trajectory_query.py  distance_cal.py  gt_flatten.py  gt_noangle.py  gt_padding_to_tum.py  odometry_extractor.py  plot_multipath_ablation_aligned.py  plot_multipath_odom_aligned.py  plot_multipath_slam_aligned.py  plot_posegraph3d_results.py  save.md
octomap_server/src/: Submap3dOptimizer.cpp  Submap3dServer.cpp  Submap3dVisualizer.cpp  submap3d_optimizer.cpp  submap3d_server.cpp  submap3d_visualizer.cpp
octomap_server/src/pose_graph_3d/: README.md  pose_graph_3d.cc  pose_graph_3d_test.cc
